long mode startup complete

--- a/src/arch/Makefile
+++ b/src/arch/Makefile
@@ -5,10 +5,9 @@ LD=ld
 .PHONY: all, clean
 
 all: boot.bin
-	@echo "boot section binary generation complete"
 
-boot.bin: header.o boot.o boot.ld
-	ld -n -o boot.bin -T boot.ld header.o boot.o
+boot.bin: header.o boot.o boot.ld long_boot.o
+	ld -n -o boot.bin -T boot.ld header.o boot.o long_boot.o
 
 header.o: boot/mult_boot_hdr.asm
 	${AS} ${FMT} boot/mult_boot_hdr.asm -o header.o
@@ -16,5 +15,8 @@ header.o: boot/mult_boot_hdr.asm
 boot.o: boot/boot.asm
 	${AS} ${FMT} boot/boot.asm -o boot.o
 
-clean: 
+long_boot.o: boot/long_boot.asm
+	${AS} ${FMT} boot/long_boot.asm -o long_boot.o
+
+clean:
 	rm -rf *.o *.bin
