Assembly utilities half completed

--- a/src/arch/Makefile
+++ b/src/arch/Makefile
@@ -6,8 +6,8 @@ LD=ld
 
 all: boot.bin
 
-boot.bin: header.o boot.o boot.ld long_boot.o
-	ld -n -o boot.bin -T boot.ld header.o boot.o long_boot.o
+boot.bin: header.o boot.o boot.ld long_boot.o console.o idt.o
+	ld -n -o boot.bin -T boot.ld header.o boot.o long_boot.o console.o idt.o
 
 header.o: boot/mult_boot_hdr.asm
 	${AS} ${FMT} boot/mult_boot_hdr.asm -o header.o
@@ -17,6 +17,12 @@ boot.o: boot/boot.asm
 
 long_boot.o: boot/long_boot.asm
 	${AS} ${FMT} boot/long_boot.asm -o long_boot.o
+
+console.o: util/console.asm
+	${AS} ${FMT} util/console.asm -o console.o
+
+idt.o: util/idt.asm
+	${AS} ${FMT} util/idt.asm -o idt.o
 
 clean:
 	rm -rf *.o *.bin
