Reorganized repository structure

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,9 +1,9 @@
 .PHONY: all, clean
 
 all:
-	${LD} -n -o kernel.bin -T image.ld *.o
+	${LD} -n -o kernel.bin -T image.ld arch.o libkernel.a
 	cp kernel.bin isofiles/boot/boot.bin
 	grub-mkrescue -o ../iso/os.iso isofiles -d /usr/lib/grub/i386-pc
 
 clean:
-	rm -rf *.o image.ld
+	rm -rf *.o image.ld libkernel.a kernel.bin
