Removed redundant code, added println! macro, added tab printing

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all, clean
 
 all:
-	${LD} -n -o kernel.bin -T image.ld arch.o libkernel.a
+	${LD} -n -o kernel.bin -T image.ld arch.o libkernel.a --gc-sections
 	cp kernel.bin isofiles/boot/boot.bin
 	grub-mkrescue -o ../iso/os.iso isofiles -d /usr/lib/grub/i386-pc
 
