--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ authors = ["Andrew Jianzhong Liu <liujzh@shanghaitech.edu.cn>"]
 crate-type = ["staticlib"]
 
 [dependencies]
-
+multiboot2 = "0.1.0"
+rlibc = "0.1.4"
+spin = "0.4.5"
 
 [profile.release]
 panic = "abort"
