About to finish memory management

--- a/src/arch/Makefile
+++ b/src/arch/Makefile
@@ -7,7 +7,7 @@ LD=ld
 all: arch_obj
 	${LD} -n -o arch.o -T boot.ld -r *.o
 
-arch_obj: header.o boot.o boot.ld long_boot.o console.o idt.o
+arch_obj: header.o boot.o boot.ld long_boot.o console.o idt.o mem.o
 
 header.o: boot/mult_boot_hdr.asm
 	${AS} ${FMT} boot/mult_boot_hdr.asm -o header.o
@@ -23,6 +23,9 @@ console.o: util/console.asm
 
 idt.o: util/idt.asm
 	${AS} ${FMT} util/idt.asm -o idt.o
+
+mem.o: util/mem.asm
+	${AS} ${FMT} util/mem.asm -o mem.o
 
 clean:
 	rm -rf *.o *.bin
